--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -2,7 +2,7 @@
 
 Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include interactions between complex ecological, socio-economic, and political factors (CITE). For example, fisheries management regions were often delineated as a result of political or geographic considerations rather than biological or ecological rationale. As a result, the management region can vary from situations in which it encompasses only a small subset of the total population of a species, to situations in which the majority of the stock is manged across a region with significant heterogeneity in the processes that drive the population dynamics. (CITE).
 
-Accounting for spatial and temporal heterogeneity in the processes that drive a stocks population dynamics has long been recognized as a challenge in fisheries science [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992,@rickerFurtherNotesFishing1944]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes, these assumptions generally result in models that treat stocks as spatially homogeneous entities. [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. Many of these assumptions were required because of computational and statistical limitations and has lead to science products that do not fully utilize the spatio-temporal information contained in the underlying data. Techniques, such as survey stratification, have been utilized in an effort to account for spatial heterogeneity and reduce uncertainty in the indices feeding these models [CITE]. Other methods have been developed to quantify changes in spatial patterns over time  (CITE Gini, D50, etc). These methods generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (often at the scale of the strata). These indices are an additional source of information providing a synoptic view of whether the distribution of parameters of interest (e.g. survey abundance or biomass) has changed over time, but they are unable to provide a detailed understanding of the spatial changes in these distributions. 
+Accounting for spatial and temporal heterogeneity in the processes that drive a stocks population dynamics has long been recognized as a challenge in fisheries science [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992,@rickerFurtherNotesFishing1944]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes, these assumptions generally result in models that treat stocks as spatially homogeneous entities. [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. Many of these assumptions were required because of computational and statistical limitations and has lead to science products that do not fully utilize the spatio-temporal information contained in the underlying data. Techniques, such as survey stratification, have been utilized in an effort to account for spatial heterogeneity and reduce uncertainty in the indices feeding these models [CITE]. Other methods have been developed to quantify changes in spatial patterns over time [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015]. These methods generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (often at the scale of the strata). These indices are an additional source of information providing a synoptic view of whether the distribution of parameters of interest (e.g. survey abundance or biomass) has changed over time, but they are unable to provide a detailed understanding of the spatial changes in these distributions. 
 
 Species distribution models (SDMs) were one of the earliest modelling frameworks developed to better understand spatial distributions and the processes that influence the observed patterns in species distributions [@grinnellOriginDistributionChestNutBacked1904; @boxPredictingPhysiognomicVegetation1981; @boothBioclimFirstSpecies2014]. These models use environmental data and species ecological information to map the occurrence probability (OP; or some measure of abundance) of a species across some land(sea)-scape; quantitative SDMs originated with attempts to predict terrestrial plant distributions [@boxPredictingPhysiognomicVegetation1981]. In the marine realm, the use of SDMs has increased rapidly in recent years; SDMs have been used in the development of Marine Protect Areas (MPAs) and MPA networks, to better understand the distribution of Species at Risk (SAR), and to predict the impact of climate change [@cheungApplicationMacroecologicalTheory2008; @robinsonPushingLimitsMarine2011; @sundbladEcologicalCoherenceMarine2011; @domischSpatiallyExplicitSpecies2019; @mchenryProjectingMarineSpecies2019]. 
 
