--- a/03-results.Rmd
+++ b/03-results.Rmd
@@ -1,6 +1,6 @@
 # RESULTS {#ref-results}
 
-## Shifts in Distirubtion
+## Distributional Shifts
 
 For both stocks their core areas shifted towards the north and east throughout the study period, this was most noticeable when focusing on the core area (OP $\geq$ `r hi.prob`) regions (Figure \@ref(fig:cog-hep)).  For Atlantic Cod the shift in distribution of the core area regions occurred relatively rapidly in the 1990s and the centre of gravity (COG) has been relatively stable since this period (Figure \@ref(fig:cog-hep)). In the 1970s and 1980s, core area was observed across the bank, however since the mid-1990s there is a clear shift in distribution with core area concentrated along the north-east of the bank mainly in Canadian waters (Figures \@ref(fig:pf-winter-cod) -\@ref(fig:pf-fall-cod)). In addition, in the Fall, Atlantic Cod has tended to be distributed along the northern edge of GB and the distribution of Atlantic Cod during this time likely includes the northern slope of the bank where there is limited survey coverage. The size of the core area has followed a similar temporal pattern as the distribution, with a rapid decline in the core area for Atlantic Cod occurring in the 1990s in the Winter and Spring (Figure \@ref(fig:area-hep)). In the Fall the decline in the size of the core area was observed approximately a decade earlier than in the Winter or Spring and the core area has been much smaller in the Fall (Figure \@ref(fig:area-hep)). Given the location of the stock along the edge of the bank during the Fall it is likely that a substantial portion of the stock is located along the slope where survey coverage is limited (Figure \@ref(fig:Overview)).
 
