--- a/04-discussion.Rmd
+++ b/04-discussion.Rmd
@@ -1,26 +1,22 @@
 # DISCUSSION
 
-The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distribution of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of high OP areas in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; we observed that the Yellowtail Flounder distribution is relatively stable throughout the year, while Atlantic Cod  move towards the slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod  and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
+The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of high OP areas in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod  moved towards the slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod  and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
 
 ### Cod
 
-For cod the static SST layer and depth were the most influential covariates and indicated that cod preferred the colder portions of the bank throughout the year. The distribution of cod has steadily shifted throughout the duration of the study period. While the depth preference of cod is more variable than yellowtail [@fahayAtlanticCodGadus1999; @johnsonYellowtailFlounderLimanda1999], as observed with yellowtail, the loss of high EP areas in the more southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. More advanced models using either a dynamic SST or modelled bottom temperature layer would lead to further insights into how changes in the thermal environment have influenced the distribution of cod over time [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. The interpretation of the static SST layer used in these analyses as thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period.
-
-The high EP area for cod collapsed rapidly in the early 1990's in unison with the collapse of cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse the core area has remained relatively consistent but has continued to slowly shift to the north and east, though the shift is more pronounced in the fall. The fall distribution of cod is likely now located on the northeastern slope of the bank outside of the core Georges Bank survey domain. This northeastern shift of the population over the course of this study suggests that this population is found outside the Georges Bank survey domain throughout the course of the year (i.e. a higher proportion of the stock is now located outside of this area). Each of the survey indices area used as inputs to the cod stock assessment model for eastern GB cod [@andrushchenkoAssessmentEasternGeorges2018]. This assessment model suffered from such significant retrospective patterns that this stock assessment model was eventually rejected; it is possible that the observed shift in the distribution of cod outside of the survey domain was a contributing factor to the model retrospective problems which was not accounted for in the model [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002].
-
-In the U.S. portion of GB closures were put in place in 1994 to assist with the rebuilding of stocks in the region, these closures have been considered as instrumental in the rebuilding of several stocks in the late 1990s [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000]. On the Canadian side of GB the primary source of fishery mortality for these species comes from bycatch in the Canadian groundfish and offshore scallop fisheries. In an effort to protect spawning aggregations on Georges Bank from bycatch the Canadian groundfish fishery is excluded from GB from early February until the end of May while the COSF is excluded from fishing inside smaller time-area closures in February, March and June. The temporal shifts in the distribution of these stocks will result in changes in the effacicy of these closed areas over time in terms of protection of the species they were originally designed to protect. In general, the shifts in both stocks to the northeast suggests that closures towards the west of Georges Bank will be less effective in protecting these two stocks than they were when the closures were first implemented while closures towards the north-east portion of Georges Bank may have more influence on these stocks then they did in the past. Additionally, recent work has found little evidence for an effect of the smaller time-area closures in reducing bycatch from the Canadian Offshore Scallop Fishery (CITE PLOS-One). Spatio-temporal models such as these enables the development of metrics which can quantify the overlap between closed areas and the species they are designed to protect, which can lead to insights into the effectiveness of these closures and how the overlap has changes over time and throughout the year (CITE SOMEONE??).
-
 The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse, the size of the core area has remained relatively consistent but has continued to slowly shift to the northeast with this shift more pronounced in the Fall. The Fall distribution of Atlantic Cod is likely now located on the northeastern slope of the bank outside of the core survey domains of any of these surveys. This northeastern shift of the stock over the course of this study suggests that the surveys may no longer be sampling the entirety of this stock throughout the course of the year (i.e. a higher proportion of the stock may now be located outside of the survey domain in the Fall than in the past). Each of the survey indices had been used as inputs to the Atlantic Cod stock assessment model for eastern GB Atlantic Cod [@andrushchenkoAssessmentEasternGeorges2018]. However, this assessment model suffered from such significant retrospective patterns that the model was recently rejected; the results of this study are in agreement with the suggestion that the observed shift in the distribution of Atlantic Cod outside of the survey domain was a contributing factor to the model retrospective problems [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002].
+
+<!-- The high EP area for cod collapsed rapidly in the early 1990's in unison with the collapse of cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse the core area has remained relatively consistent but has continued to slowly shift to the north and east, though the shift is more pronounced in the fall. The fall distribution of cod is likely now located on the northeastern slope of the bank outside of the core Georges Bank survey domain. This northeastern shift of the population over the course of this study suggests that this population is found outside the Georges Bank survey domain throughout the course of the year (i.e. a higher proportion of the stock is now located outside of this area). Each of the survey indices area used as inputs to the cod stock assessment model for eastern GB cod [@andrushchenkoAssessmentEasternGeorges2018]. This assessment model suffered from such significant retrospective patterns that this stock assessment model was eventually rejected; it is possible that the observed shift in the distribution of cod outside of the survey domain was a contributing factor to the model retrospective problems which was not accounted for in the model [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002]. -->
+
+<!-- In the U.S. portion of GB closures were put in place in 1994 to assist with the rebuilding of stocks in the region, these closures have been considered as instrumental in the rebuilding of several stocks in the late 1990s [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000]. On the Canadian side of GB the primary source of fishery mortality for these species comes from bycatch in the Canadian groundfish and offshore scallop fisheries. In an effort to protect spawning aggregations on Georges Bank from bycatch the Canadian groundfish fishery is excluded from GB from early February until the end of May while the COSF is excluded from fishing inside smaller time-area closures in February, March and June. The temporal shifts in the distribution of these stocks will result in changes in the efficacy of these closed areas over time in terms of protection of the species they were originally designed to protect. In general, the shifts in both stocks to the northeast suggests that closures towards the west of Georges Bank will be less effective in protecting these two stocks than they were when the closures were first implemented while closures towards the north-east portion of Georges Bank may have more influence on these stocks then they did in the past. Additionally, recent work has found little evidence for an effect of the smaller time-area closures in reducing bycatch from the Canadian Offshore Scallop Fishery (CITE PLOS-One). Spatio-temporal models such as these enables the development of metrics which can quantify the overlap between closed areas and the species they are designed to protect, which can lead to insights into the effectiveness of these closures and how the overlap has changes over time and throughout the year (CITE SOMEONE??). -->
 
 ### Yellowtail
 
-The depth, static SST, and sediment type were generally the most influential variables for yellowtail for all the models tested. Yellowtail was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between XXX and XXX meters [@johnsonYellowtailFlounderLimanda1999] and in historically lower SST regions of the bank; most of the remaining habitat which meet these criteria are found straddling the border between Canada and the U.S.A and in Canadian waters on GB. The random fields in each season (see supplemental material) also indicated a consistent increased likelihood of encountering yellowtail in the region straddling the Canadian and U.S. border and this suggests there is some unexplained ecological or environmental significance in this region. The shift in the distribution of yellowtail away from more southern and western parts of GB combined with the declines in biomass of yellowtail throughout the U.S. supports the view that the environmental change that has been observed throughout U.S. waters has been a factor in the recent decline of yellowtail both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail from the warmer portions of the bank observed in this study it is possible that the remaining core area around CA II and in Canada represents the most northern suitable habitat on GB for this species. If temperatures continue to increase as projected the suitability of this habitat may decline which would increase the risk of extirpation of yellowtail from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
 
-Yellowtail Flounder was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between `r yt.dep.peak` meters which is consistent with the known life history for this species [@johnsonYellowtailFlounderLimanda1999]. In historically lower SST regions of the bank most of the remaining habitat on GB which meet these criteria straddle the ICJ line on GB. In addition, there was a consistent increased likelihood of encountering Yellowtail Flounder in this area which was not explained by the environmental covariates. This suggests this region has some unexplained ecological or environmental significance to Yellowtail Flounder.
+Yellowtail Flounder was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between `r yt.dep.peak` meters which is consistent with the known life history for this species [@johnsonYellowtailFlounderLimanda1999]. In historically lower SST regions of the bank most of the remaining habitat on GB which meet these criteria straddle the ICJ line on GB. In addition, there was a consistent increased likelihood of encountering Yellowtail Flounder in this area which was not explained by the environmental covariates. This suggests this region has some unexplained ecological or environmental significance to Yellowtail Flounder. The shift in the distribution of Yellowtail Flounder away from more southern and western parts of GB combined with the declines in biomass of Yellowtail Flounder throughout the U.S. supports the view that the environmental change which has been observed throughout U.S. waters has been a factor in the recent decline of Yellowtail Flounder both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail Flounder from the warmer portions of the bank observed in this study it is possible that the remaining core area straddling the ICJ line represents the most northern suitable habitat on GB for this species. If temperatures continue to increase, as projected with climate change, the suitability of this habitat may decline which would increase the risk of extirpation of Yellowtail Flounder from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
 
-The shift in the distribution of Yellowtail Flounder away from more southern and western parts of GB combined with the declines in biomass of Yellowtail Flounder throughout the U.S. supports the view that the environmental change which has been observed throughout U.S. waters has been a factor in the recent decline of Yellowtail Flounder both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail Flounder from the warmer portions of the bank observed in this study it is possible that the remaining core area straddling the ICJ line represents the most northern suitable habitat on GB for this species. If temperatures continue to increase, as projected with climate change, the suitability of this habitat may decline which would increase the risk of extirpation of Yellowtail Flounder from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
 
-## Environmental Covariates
+## Environmental Covariates and Radndom Fields
 
 The results indicate that few of the static environmental covariates related to groundfish distribution with only a static SST layer, depth, and sediment type having any consistent relationship to the likelihood of encountering either species throughout the duration of this study.
 
@@ -28,7 +24,11 @@ The influence of the average SST layer as an environmental covariate in the mode
 
 The incorporation of dynamic environmental covariates either from remote sensing or oceanographic models would be a logical next step to determine if changes in, for example bottom temperature, have driven the patterns observed for these species.
 
-## Random Fields
+The distribution of cod has steadily shifted throughout the duration of the study period. The static SST layer and depth were the most influential covariates and indicated that cod preferred the colder portions of the bank throughout the year. While the depth preference of cod is more variable than yellowtail [@fahayAtlanticCodGadus1999; @johnsonYellowtailFlounderLimanda1999], the loss of high EP areas in the more southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. 
+
+More advanced models using either a dynamic SST or modelled bottom temperature layer would lead to further insights into how changes in the thermal environment have influenced the distribution of cod over time [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. The interpretation of the static SST layer used in these analyses as thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period.
+
+The depth, static SST, and sediment type were generally the most influential variables for yellowtail for all the models tested. Yellowtail was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between XXX and XXX meters [@johnsonYellowtailFlounderLimanda1999] and in historically lower SST regions of the bank; most of the remaining habitat which meet these criteria are found straddling the border between Canada and the U.S.A and in Canadian waters on GB. The random fields in each season (see supplemental material) also indicated a consistent increased likelihood of encountering yellowtail in the region straddling the Canadian and U.S. border and this suggests there is some unexplained ecological or environmental significance in this region. The shift in the distribution of yellowtail away from more southern and western parts of GB combined with the declines in biomass of yellowtail throughout the U.S. supports the view that the environmental change that has been observed throughout U.S. waters has been a factor in the recent decline of yellowtail both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail from the warmer portions of the bank observed in this study it is possible that the remaining core area around CA II and in Canada represents the most northern suitable habitat on GB for this species. If temperatures continue to increase as projected the suitability of this habitat may decline which would increase the risk of extirpation of yellowtail from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
 
 The flexibility of the random fields alone (intercept models) indicated that from a predictive standpoint the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields are flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely on environmental covariates [@yinPrepSpatiotemporalModel2019].
 
